@@ -1,3 +1,9 @@
+2011-08-12  Mark Grondona <mgrondona@llnl.gov>
+
+	* src/pdsh/wcoll.c, src/pdsh/wcoll.h :
+	  Add read_wcoll_path to read wcoll from a path,
+	  with #include syntax.
+
 2011-07-26  Mark Grondona <mgrondona@llnl.gov>
 
 	* scripts/dshbak :
